<resources>
    <string name="app_name">Android Labs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Відміна</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="type_your_message">Type your message</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="open">Open</string>
    <string name="message">Message</string>
    <string name="font_size">Font size</string>
    <string name="open_history">Open history</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="open_video">Open video</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="your_link">Your link</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="open_audio">Open audio</string>
    <string name="x_accelerometer">X Accelerometer:</string>
    <string name="y_accelerometer">Y Accelerometer:</string>
    <string name="z_accelerometer">Z Accelerometer:</string>
    <string name="x_magnetometer">X Magnetometer:</string>
    <string name="y_magnetometer">Y Magnetometer:</string>
    <string name="z_magnetometer">Z Magnetometer:</string>
    <string name="open_sensors">Open sensors</string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="magnetometer">Magnetometer:</string>
    <string name="load_source">Load source</string>
    <string name="title_activity_sensor">SensorActivity</string>
</resources>