<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/Theme.AndroidLabs.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/video_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/Theme.AndroidLabs.PopupOverlay"
            app:title="Video" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">
        <EditText
            android:id="@+id/video_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_link"
            android:autofillHints=""
            android:inputType="text" />

        <Button
            android:id="@+id/load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_source"
            android:onClick="loadVideo"
            app:layout_constraintBottom_toTopOf="@id/videoPlayer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pauseButton"
            app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="?attr/actionBarSize">
        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:onClick="play"
            app:layout_constraintBottom_toTopOf="@id/videoPlayer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pauseButton"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:onClick="pause"
            app:layout_constraintBottom_toTopOf="@id/videoPlayer"
            app:layout_constraintLeft_toRightOf="@id/playButton"
            app:layout_constraintRight_toLeftOf="@id/stopButton"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:onClick="stop"
            app:layout_constraintBottom_toTopOf="@id/videoPlayer"
            app:layout_constraintLeft_toRightOf="@id/pauseButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

        <VideoView android:id="@+id/videoPlayer"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playButton"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>